--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.27.2",
     "countries-states-cities-service": "^1.3.2",
     "country-state-city": "^3.0.1",
+    "firebase": "^9.9.3",
+    "firestore": "^1.1.6",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
