--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.9.3",
     "firestore": "^1.1.6",
     "formik": "^2.2.9",
+    "luxon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
